--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <title>Andromeda Frontend</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.jsdelivr.net/npm/@andromeda-protocol/andromeda-js"></script>
 </head>
 <body>
     <h1>Andromeda Frontend</h1>
 
     <!-- Fetch ADO Data -->
+    <input type="text" id="adoAddress" placeholder="Enter ADO Address" />
     <button id="fetchData">Fetch ADO Metadata</button>
     <pre id="output"></pre>
 
